--- a/reveal.js/presentation.html
+++ b/reveal.js/presentation.html
@@ -35,7 +35,7 @@
 	</head>
 
 	<body>
-
+    <div style='font-family: "Source Sans Pro", Helvetica, sans-serif;font-size:35px;color:white;position:absolute;bottom:10px;left:4px'> @evanburchard</div>
 		<div class="reveal">
 
 			<!-- Any section element inside of this container is displayed as a slide -->
@@ -517,16 +517,7 @@ end
 				</section>
 				<section>
           <h1>Resources</h1>
-          <ul>
-            <li>github.com/evanburchard/machine_dignity_workshop</li>
-            <li>wikipedia.org/wiki/Dignity</li>
-            <li>"Flourishing": wikipedia.org/wiki/Eudaimonia</li>
-            <li>wikipedia.org/wiki/Problem_of_other_minds</li>
-            <li>"Moral Machines" by Wendell Wallach and Colin Allen</li>
-            <li>Search: "William Opdyke" Thesis PDF</li>
-            <li>refactoringjs.com</li>
-            <li>The consequences of an insightful algorithm</li>
-          </ul>
+          <p>github.com/EvanBurchard/refactoring_for_machine_dignity</p>
 				</section>
 				<section>
           <h1>Bonus: Characterization Tests</h1>
